{
    "name": "MasterInput",
    "maps": [
        {
            "name": "Player0",
            "id": "1308c960-c7fc-4b54-9ec4-1cc291953cc3",
            "actions": [
                {
                    "name": "PrimaryAttack",
                    "type": "Button",
                    "id": "9e7eb1aa-0b54-43c7-aa26-5ced72c83405",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryAttack",
                    "type": "Button",
                    "id": "cea056b8-c5ec-443c-8c06-17e12ef24cb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "478f5e8c-f5fb-404c-ab92-6aa1446b680f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "e6ca8b1b-888b-4933-9866-5d58b0367347",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a9995963-54e7-4c6c-917d-42dc31fb3835",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Defense",
                    "type": "Button",
                    "id": "8905873a-2aa1-4dd1-a303-b0f5835b8be0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Special",
                    "type": "Button",
                    "id": "72785548-7f73-43c3-b2a0-64a68cfb1d73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryItem",
                    "type": "Button",
                    "id": "0a53a934-2a2b-4699-af2a-be60161bf676",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SecondaryItem",
                    "type": "Button",
                    "id": "10ae61bd-4845-46af-85bf-a8770893bb3f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b94d383-ad99-4799-8dcb-67b86a7acc54",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "PrimaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0402ff90-d47b-437b-8e32-1ebb93c1e8ff",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "SecondaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a059d55-ebd4-4272-b7e7-1ec0cc24570f",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c45d30f-1f7b-451a-be6b-6efa3ec5fcb6",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "7f687c9d-69be-4cee-81fe-be3b3a5cf5f6",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e3710eed-bb53-4145-9975-2a8fd0b084af",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b98fa3f4-0f51-46b4-a3e9-5e05d885e794",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7e242c9e-c6a8-4704-856a-2cb68df41b1c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "69e4d36f-23cf-4264-9d65-6de003301c55",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8437273f-c56a-4736-8245-72308cf2c71b",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Defense",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9930cc20-b7d3-48b2-83cf-f5f473bbd3af",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "Special",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fc7d6e6-41a7-4271-8bd6-50e2a209406f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "PrimaryItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c714470a-763d-4659-bc6d-8dfae0f54a9a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Master",
                    "action": "SecondaryItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Master",
            "bindingGroup": "Master",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}