using System.Collections;
using System.Collections.Generic;
using UnityEngine;
namespace Game.Enums {
   public static class InputTypeEnums {
        public static int PrimaryAttack = 0;
        public static int SecondaryAttack = 1;
        public static int Jump = 2;
        public static int Grab = 3;
        public static int Defense = 4; 
        public static int Special = 5; 
        public static int PrimaryItem = 6;
        public static int SecondaryItem = 7;
        public static int Up = 8;
        public static int Down = 9;
        public static int Left = 10;
        public static int Right = 11;
        public static int Start = 12;
        public static int Select = 13;

    }


}
